editors/tree-sitter-ezc/test/corpus/containers.txt
================================================================================
Blocks
================================================================================

(2 *)

--------------------------------------------------------------------------------

(source_file
  (block
    (integer)
    (op_mul)))

================================================================================
Lists
================================================================================

[1 2 3]

--------------------------------------------------------------------------------

(source_file
  (list
    (integer)
    (integer)
    (integer)))

================================================================================
Scopes
================================================================================

{ 10 @t }

--------------------------------------------------------------------------------

(source_file
  (scope
    (integer)
    (bind)))

================================================================================
Nested containers
================================================================================

[(1 2 +) (3 4 +)]

--------------------------------------------------------------------------------

(source_file
  (list
    (block
      (integer)
      (integer)
      (op_add))
    (block
      (integer)
      (integer)
      (op_add))))
