editors/tree-sitter-ezc/test/corpus/literals.txt
================================================================================
Integer literals
================================================================================

42 0 100

--------------------------------------------------------------------------------

(source_file
  (integer)
  (integer)
  (integer))

================================================================================
Hex integer literals
================================================================================

0xFF 0xDEAD

--------------------------------------------------------------------------------

(source_file
  (hex_integer)
  (hex_integer))

================================================================================
Typed integer literals
================================================================================

42u8 100i32 0u256

--------------------------------------------------------------------------------

(source_file
  (typed_integer)
  (typed_integer)
  (typed_integer))

================================================================================
Float literals
================================================================================

3.14 1.0e10

--------------------------------------------------------------------------------

(source_file
  (float)
  (float))

================================================================================
Typed float literals
================================================================================

3.14f32 42f64

--------------------------------------------------------------------------------

(source_file
  (typed_float)
  (typed_float))

================================================================================
String literals
================================================================================

"hello" "a\nb"

--------------------------------------------------------------------------------

(source_file
  (string
    (string_content))
  (string
    (string_content)
    (escape_sequence)
    (string_content)))
