editors/tree-sitter-ezc/test/corpus/programs.txt
================================================================================
Simple addition
================================================================================

3 4 +

--------------------------------------------------------------------------------

(source_file
  (integer)
  (integer)
  (op_add))

================================================================================
Block execute
================================================================================

3 4 + (2 *) !

--------------------------------------------------------------------------------

(source_file
  (integer)
  (integer)
  (op_add)
  (block
    (integer)
    (op_mul))
  (op_execute))

================================================================================
Print value
================================================================================

42 :

--------------------------------------------------------------------------------

(source_file
  (integer)
  (op_write))

================================================================================
Dup with comma
================================================================================

5 ,

--------------------------------------------------------------------------------

(source_file
  (integer)
  (op_dup))

================================================================================
Drop with semicolon
================================================================================

5 ;

--------------------------------------------------------------------------------

(source_file
  (integer)
  (op_drop))

================================================================================
Comments
================================================================================

3 4 + # this is a comment

--------------------------------------------------------------------------------

(source_file
  (integer)
  (integer)
  (op_add)
  (comment))

================================================================================
Type constructors
================================================================================

42 f32 int str

--------------------------------------------------------------------------------

(source_file
  (integer)
  (type_constructor)
  (type_constructor)
  (type_constructor))

================================================================================
Map over list
================================================================================

[1 2 3] (2 *) &!

--------------------------------------------------------------------------------

(source_file
  (list
    (integer)
    (integer)
    (integer))
  (block
    (integer)
    (op_mul))
  (op_map))

================================================================================
Fold reduce
================================================================================

[1 2 3] 0 (+) &/

--------------------------------------------------------------------------------

(source_file
  (list
    (integer)
    (integer)
    (integer))
  (integer)
  (block
    (op_add))
  (op_fold))

================================================================================
Variable bind and recall
================================================================================

5 @x $x $x +

--------------------------------------------------------------------------------

(source_file
  (integer)
  (bind)
  (recall)
  (recall)
  (op_add))

================================================================================
I/O builtins
================================================================================

rl wl rb wb

--------------------------------------------------------------------------------

(source_file
  (builtin)
  (builtin)
  (builtin)
  (builtin))
