extras/tree-sitter-ezc/test/corpus/operators.txt
================================================================================
Arithmetic operators
================================================================================

+ - * / % ^

--------------------------------------------------------------------------------

(source_file
  (op_add)
  (op_sub)
  (op_mul)
  (op_div)
  (op_mod)
  (op_pow))

================================================================================
Comparison operators
================================================================================

== != < > <= >=

--------------------------------------------------------------------------------

(source_file
  (op_eq)
  (op_neq)
  (op_lt)
  (op_gt)
  (op_lteq)
  (op_gteq))

================================================================================
Stack operators
================================================================================

, ~ _ ;

--------------------------------------------------------------------------------

(source_file
  (op_dup)
  (op_swap)
  (op_over)
  (op_drop))

================================================================================
IO operators
================================================================================

: .

--------------------------------------------------------------------------------

(source_file
  (op_write)
  (op_read))

================================================================================
Control operators
================================================================================

! ? ??

--------------------------------------------------------------------------------

(source_file
  (op_execute)
  (op_cond)
  (op_ternary))

================================================================================
Higher-order operators
================================================================================

& &! &? &/

--------------------------------------------------------------------------------

(source_file
  (op_loop)
  (op_map)
  (op_filter)
  (op_fold))

================================================================================
Compose operator
================================================================================

|

--------------------------------------------------------------------------------

(source_file
  (op_compose))
